--- a/Project-Inferno/src/main/resources/application.properties
+++ b/Project-Inferno/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://mysql-inferno-project-inferno.a.aivencloud.com:13107/defaultdb
-spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_t0MTfPvtdphiw2dG6Gk
+spring.datasource.url=jdbc:mysql://mysql-inferno-project-inferno.a.aivencloud.com:PORT/defaultdb
+spring.datasource.username=YourUsername
+spring.datasource.password=YourPassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
